--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,9 @@ phases:
   build:
     commands:
         - npm run build
+  post_build:
+    commands: 
+        -npm start
      
 artifacts:
   files:
